--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,14 @@
   </properties>
   
   <dependencies>
-
+	
+	<!-- weld (Implementação do CDI) -->
+	<dependency>
+	    <groupId>org.jboss.weld.servlet</groupId>
+	    <artifactId>weld-servlet</artifactId>
+	    <version>1.1.10.Final</version>
+	</dependency>
+	
   	<!-- Mojarra (implementação do JSF 2) -->
 	<dependency>
 		<groupId>org.glassfish</groupId>
