--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,34 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>war</packaging>
   
-  <properties>
+  	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
+	
 	<dependencies>
+		<!-- Núcleo do hibernate -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.2.3.Final</version>
+			<scope>compile</scope>
+		</dependency>
 		
+		<!-- Implementação de EntityManager da JPA -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>4.2.3.Final</version>
+			<scope>compile</scope>
+		</dependency>
+		
+		<!-- Driver JDBC dp Mysql -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.25</version>
+			<scope>compile</scope>
+		</dependency>
 		<!-- weld (Implementação do CDI) -->
 		<dependency>
 		    <groupId>org.jboss.weld.servlet</groupId>
@@ -34,6 +56,21 @@
 			<version>5.2</version>
 			<scope>compile</scope>
 		</dependency>
+		<!-- Log4j -->
+		<dependency>	
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+			<scope>compile</scope>		
+		</dependency>
+		
+		<!-- Commons logging (abstrai a implementação do log) -->
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.3</version>
+		</dependency>
+		
 	</dependencies>
 
     <build>
