--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,11 @@
 	  	<param-value>true</param-value>
 	  </context-param>
 	  
+		<context-param>
+			<param-name>javax.faces.PROJECT_STAGE</param-name>
+			<param-value>Development</param-value>
+		</context-param>
+	  
 	  <listener>
 	  	<listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
 	  </listener>
