Implementação do BeanValidation e HibernateValidation.

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,14 @@
 	</properties>
 	
 	<dependencies>
+		<!-- Implemetando Bean Validation -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.0.1.Final</version>
+			<scope>compile</scope>
+		</dependency>
+	
 		<!-- Núcleo do hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
