--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,14 @@
 			<version>1.1.3</version>
 		</dependency>
 		
+		<!-- Commons Lang (utilidades) -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+			<scope>compile</scope>
+		</dependency>
+		
 	</dependencies>
 
     <build>
