--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- OmniFaces (utilitarios para JSF) -->
