--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
 			<version>2.1.21</version>
 			<scope>compile</scope>
 		</dependency>
-		
+
 		<!-- Abstração para envio de emails -->
 		<dependency>
 			<groupId>com.outjected</groupId>
@@ -75,7 +75,7 @@
 			<version>0.2.1</version>
 			<scope>compile</scope>
 		</dependency>
-		
+
 		<!-- Requerido para envio de emails -->
 		<dependency>
 			<groupId>javax.mail</groupId>
@@ -83,9 +83,24 @@
 			<version>1.4.7</version>
 			<scope>compile</scope>
 		</dependency>
-		
-		
-		<!-- Jar do javax.servlet que suporta annotation (Importante)  -->
+
+		<!-- Usamos para templates de emails -->
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- Usamos para formatar números em templates -->
+		<dependency>
+			<groupId>velocity-tools</groupId>
+			<artifactId>velocity-tools-generic</artifactId>
+			<version>1.1</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- Jar do javax.servlet que suporta annotation (Importante) -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -100,6 +115,24 @@
 			<version>1.5</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<!-- Spring Security (autenticação e autorização) -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>3.1.4.RELEASE</version>
+		</dependency> 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>3.1.4.RELEASE</version>
+		</dependency> 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>3.1.4.RELEASE</version>
+		</dependency>
+		
 
 		<!-- Log4J -->
 		<dependency>
